--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
-<body ng-app="socially">
-
+<body ng-app='rental'>
 
     {{>header}}
-        <div ui-view>
-        </div>
-    {{>footer}}
 
 
+
+      <div ui-view>
+      </div>
+
+  
+  {{>footer}}
 </body>
